--- a/style.css
+++ b/style.css
@@ -120,11 +120,15 @@ header {
     background-color: black;
 }
 
+.microsoft-logo {
+  width: 100px;
+  margin-right: 80%;
+}
+
 .hero {
     top: 0;
     left: 0;
     position: relative;
-    margin-top: 10px;
     width: 100vw;
     height: 550px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 40%,rgba(0,0,0,.5)55% , rgba(0,0,0,1) 80%);
@@ -159,4 +163,27 @@ header {
     font-weight: 900;
     background-color: #9bf00b;
     border: none;
+}
+
+.icon-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 20px 15px;
+  gap: 20px;
+}
+
+.icon {
+  color: #107c10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 600;
+  font-size: 14px;
+  width: 100px;
+  justify-self: center;
+}
+
+.icon > img {
+  padding: 5px 20px;
 }
