--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header {
 }
 .menu-line {
     background-color: black;
-    width: 22px;
+    width: 20px;
     height: 2px;
     margin-bottom: 3px;
     border-radius: 2px;
@@ -117,7 +117,6 @@ header {
     height: 35px;
     width: 35px;
     border-radius: 35px;
-    background-color: black;
 }
 
 .microsoft-logo {
@@ -186,4 +185,54 @@ header {
 
 .icon > img {
   padding: 5px 20px;
+}
+
+.card {
+  position: relative;
+  background-color: #107c10;
+  margin: 4px 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 500px;
+}
+
+.card-content {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 50%;
+  background-color: #333333;
+  color: #fff;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px 10px;
+  align-items:start;
+}
+
+.alt-image-content {
+  top: 40%;
+  height: 60%;
+  background-color: #107c10;
+}
+
+.card-content > a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 900;
+}
+
+.card-content > p {
+  font-size: 14px;
+}
+
+.yellow-banner {
+  background-color: #ffd800;
+  color: black;
+  font-size: 13px;
+  padding: 0 5px;
+  letter-spacing: 1px;
 }
